--- a/tests/routes.neon
+++ b/tests/routes.neon
@@ -1,3 +1,7 @@
+poot:
+	route: poot
+	alias: aaa
+
 api:
 	route: api/
 	middleware:
@@ -16,3 +20,7 @@ api:
 				id: \d+
 			defaults:
 				id: 12
+
+		aaa:
+			route: plain
+			alias: show
